docs/k8s-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capris-api
spec:
  selector:
    app: capris-api
  ports:
    - name: http
      port: 4000
      targetPort: http
