docs/k8s-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capris-web
spec:
  selector:
    app: capris-web
  ports:
    - name: http
      port: 3000
      targetPort: http
